--- a/src/main/webapp/assets/css/less/supply.less
+++ b/src/main/webapp/assets/css/less/supply.less
@@ -39,6 +39,22 @@
   height: 120px;
 }
 
+.supply-item-image-modal {
+  .title-pane {
+    background-color: #222;
+    color: #d6d6d6;
+    text-align: center;
+    h3 {
+      margin: 0;
+      padding: 5px;
+    }
+  }
+  img {
+    display: block;
+    max-height: 800px;
+  }
+}
+
 .add-to-cart-btn {
   width: 90%;
   margin: 5px 10px 10px 10px;
